feat: rename `version-checker` to `update-popup`

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "version-checker",
+  "projectName": "update-popup",
   "projectOwner": "FEMessage",
   "repoType": "github",
   "repoHost": "https://github.com",
