--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@femessage/version-checker",
+  "name": "@femessage/update-popup",
   "version": "1.0.4",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/FEMessage/version-checker.git"
+    "url": "https://github.com/FEMessage/update-popup.git"
   },
   "keywords": [
     "vue",
