--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   ],
   "dependencies": {
     "@evillt/toast": "^1.3.1",
-    "fs-extra": "^9.0.1"
+    "fs-extra": "^9.0.1",
+    "lodash.get": "^4.4.2"
   },
   "devDependencies": {
     "@femessage/github-release-notes": "^0.19.0",
