--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "files": [
     "**/*.js"
   ],
+  "scripts": {
+    "test": "echo lol"
+  },
   "dependencies": {
     "@evillt/toast": "^1.3.1",
     "fs-extra": "^9.0.1",
