--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "@evillt/toast": "^1.3.1",
     "fs-extra": "^9.0.1",
-    "lodash.get": "^4.4.2"
+    "lodash.get": "^4.4.2",
+    "pupa": "^2.0.1"
   },
   "devDependencies": {
     "@femessage/github-release-notes": "^0.19.0",
