--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@evillt/toast": "^1.3.1",
+    "escape-goat": "^3.0.0",
     "fs-extra": "^9.0.1",
     "lodash.get": "^4.4.2",
     "pupa": "^2.0.1"
