--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@femessage/update-popup",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -21,8 +21,7 @@
   "dependencies": {
     "@evillt/toast": "^1.3.1",
     "fs-extra": "^9.0.1",
-    "lodash.get": "^4.4.2",
-    "pupa": "^2.0.1"
+    "lodash.get": "^4.4.2"
   },
   "devDependencies": {
     "@femessage/github-release-notes": "^0.19.0",
