--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -9,6 +9,20 @@
   "imageSize": 100,
   "commit": false,
   "commitConvention": "angular",
-  "contributors": [],
+  "contributors": [
+    {
+      "login": "evillt",
+      "name": "EVILLT",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/19513289?v=4",
+      "profile": "https://evila.me/",
+      "contributions": [
+        "code",
+        "test",
+        "ideas",
+        "doc",
+        "maintenance"
+      ]
+    }
+  ],
   "contributorsPerLine": 7
 }
