--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "**/*.js"
   ],
   "scripts": {
-    "test": "echo lol"
+    "test": "jest"
   },
   "dependencies": {
     "@evillt/toast": "^1.3.1",
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@femessage/github-release-notes": "^0.19.0",
     "husky": "1.3.1",
+    "jest": "^26.1.0",
     "lint-staged": "^8.1.0",
     "prettier": "1.18.2",
     "standard-version": "^8.0.1"
