--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "**/*.js"
   ],
   "scripts": {
-    "test": "echo lol"
+    "test": "jest --verbose"
   },
   "dependencies": {
     "@evillt/toast": "^1.3.1",
@@ -24,8 +24,11 @@
     "lodash.get": "^4.4.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
     "@femessage/github-release-notes": "^0.19.0",
     "husky": "1.3.1",
+    "jest": "^26.1.0",
     "lint-staged": "^8.1.0",
     "prettier": "1.18.2",
     "standard-version": "^8.0.1"
